Functional test - display working with user button

--- a/final_oled/final_oled.ioc
+++ b/final_oled/final_oled.ioc
@@ -102,6 +102,7 @@ MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -112,7 +113,7 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.Locked=true
-PA0.Signal=S_TIM2_CH1
+PA0.Signal=ADCx_IN5
 PA1.Locked=true
 PA1.Signal=ADCx_IN6
 PA10.Locked=true
@@ -176,8 +177,11 @@ PC11.Locked=true
 PC11.Signal=SDMMC1_D3
 PC12.Locked=true
 PC12.Signal=SDMMC1_CK
+PC13.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC13.GPIO_Label=BUTTON
+PC13.GPIO_PuPd=GPIO_PULLDOWN
 PC13.Locked=true
-PC13.Signal=SYS_WKUP2
+PC13.Signal=GPXTI13
 PC14-OSC32_IN\ (PC14).Locked=true
 PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (PC15).Locked=true
@@ -355,10 +359,14 @@ SH.ADCx_IN3.0=ADC1_IN3
 SH.ADCx_IN3.ConfNb=1
 SH.ADCx_IN4.0=ADC1_IN4
 SH.ADCx_IN4.ConfNb=1
+SH.ADCx_IN5.0=ADC1_IN5
+SH.ADCx_IN5.ConfNb=1
 SH.ADCx_IN6.0=ADC1_IN6
 SH.ADCx_IN6.ConfNb=1
 SH.ADCx_IN8.0=ADC1_IN8
 SH.ADCx_IN8.ConfNb=1
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
 SH.S_TIM15_CH1.0=TIM15_CH1
 SH.S_TIM15_CH1.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1
@@ -369,8 +377,6 @@ SH.S_TIM1_CH3.0=TIM1_CH3
 SH.S_TIM1_CH3.ConfNb=1
 SH.S_TIM1_ETR.0=TIM1_ETR
 SH.S_TIM1_ETR.ConfNb=1
-SH.S_TIM2_CH1.0=TIM2_CH1
-SH.S_TIM2_CH1.ConfNb=1
 SH.S_TIM2_CH3.0=TIM2_CH3
 SH.S_TIM2_CH3.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2
